[gd_scene load_steps=5 format=3 uid="uid://qv1m7rspcxl3"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="1_ns7gd"]
[ext_resource type="Script" path="res://Scripts/Menus/QuestsPanel/QuestsPanel.gd" id="1_pvo7n"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="2_r1cnh"]
[ext_resource type="Theme" uid="uid://cr8ed0igvvahw" path="res://Themes/ButtonRowTheme.tres" id="3_b8156"]

[node name="QuestsPanelNode" type="Node2D"]
script = ExtResource("1_pvo7n")

[node name="QuestsPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 960.0
theme = ExtResource("1_ns7gd")

[node name="Panel" type="Panel" parent="QuestsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestsTitle" type="RichTextLabel" parent="QuestsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
theme = ExtResource("2_r1cnh")
bbcode_enabled = true
text = "[center]Quests[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="QuestsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 120.0
grow_horizontal = 2
theme = ExtResource("3_b8156")
alignment = 1

[node name="InProgressButton" type="Button" parent="QuestsPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "In Progress"

[node name="ReadyToTurnInButton" type="Button" parent="QuestsPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Ready to Turn In"

[node name="CompletedButton" type="Button" parent="QuestsPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Completed"

[node name="NotCompletedButton" type="Button" parent="QuestsPanel/Panel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Not Completed"

[node name="ScrollContainer" type="ScrollContainer" parent="QuestsPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 128.0
offset_right = -80.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="QuestsPanel/Panel/ScrollContainer"]
custom_minimum_size = Vector2(1120, 76)
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="QuestsPanel/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -64.0
offset_right = 25.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="QuestsPanel/Panel/HBoxContainer/InProgressButton" to="." method="_on_in_progress_button_pressed"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/InProgressButton" to="." method="_on_in_progress_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/ReadyToTurnInButton" to="." method="_on_ready_to_turn_in_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/CompletedButton" to="." method="_on_completed_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/NotCompletedButton" to="." method="_on_not_completed_button_toggled"]
[connection signal="pressed" from="QuestsPanel/Panel/BackButton" to="." method="_on_back_button_pressed"]
